# rapier.js

./: .gitignore  .prettierignore  CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish_all_no-compat.sh  webpack.config.js
.github/workflows/: main.yml  minimal.yml  publish_prod.yml  rapier-js-ci-build.yml
builds/prepare_builds/: Cargo.toml  README.md  build_all_projects.sh  prepare_all_projects.sh
builds/prepare_builds/assets/: dim2.json  dim2.ron  dim2_deterministic.json  dim2_deterministic.ron  dim2_simd.json  dim2_simd.ron  dim3.json  dim3_deterministic.json  dim3_deterministic.ron  dim3_simd.json  dim3_simd.ron  example_dim2_minimal.json  example_dim2_minimal.ron  example_dim3_minimal.json  example_dim3_minimal.ron
builds/prepare_builds/src/: main.rs
builds/prepare_builds/templates/: Cargo.toml.tera  README.md.tera  build_rust.sh.tera  build_typescript.sh.tera  package.json.tera
builds/prepare_builds/templates/no-compat/: build_rust.sh.tera  package.json.tera  (+1 more)
prepare_builds/: README.md  build_all_projects.sh  prepare_all_projects.sh
prepare_builds/src/: main.rs
prepare_builds/templates/no-compat/: Cargo.toml.tera  README.md.tera  package.json.tera  tsconfig_typedoc.json
rapier-compat/: README.md  build-rust.sh  build_conf.sh  build_rust.sh  fix_raw_file.sh  gen_src.sh  package-lock.json  package.json  rollup.config.js  tsconfig.common.json  tsconfig.json  tsconfig.pkg2d.json  tsconfig.pkg3d.json  webpack.config.js
rapier-compat/src2d/: init.ts  raw.ts
rapier-compat/src3d/: init.ts  raw.ts
rapier-compat/tests/: ScalarGetters2d.test.ts  ScalarGetters3d.test.ts  World2d.test.ts  World3d.test.ts  math2d.test.ts  math3d.test.ts
rapier-inject/: .gitignore  copy_compat_files.sh  package-lock.json  package.json  rollup.config.js
rapier-inject/src2d/: init.ts
rapier-inject/src3d/: init.ts
rapier-module/: package.json  tsconfig.json  webpack.config.js
rapier2d/: Cargo.toml  README.md  build_all.sh  build_doc.sh  build_rust.sh  build_typescript.sh  package-lock.json  package.json  tsconfig.json  tsconfig_typedoc.json  typedoc.json
rapier3d/: Cargo.toml  README.md  build_all.sh  build_rust.sh  build_typescript.sh  package-lock.json  package.json  tsconfig.json  tsconfig.src.json  tsconfig_typedoc.json  typedoc.json
scripts/: build.js  copy_src.js  verify_simd_compat.sh  verify_simd_rust.sh
src/: lib.rs  math.rs  utils.rs  world.rs
src.js/: lib.ts  math.ts  rapier.ts  tsconfig2d.json  tsconfig3d.json
src.js/dynamics/: integration_parameters.ts  joint.ts  joint_set.ts  rigid_body.ts  rigid_body_set.ts
src.js/geometry/: broad_phase.ts  collider.ts  collider_set.ts  narrow_phase.ts  ray.ts  shape.ts
src.js/pipeline/: event_queue.ts  index.ts  physics_pipeline.ts  query_pipeline.ts  serialization_pipeline.ts  world.ts
src.ts/: coarena.ts  exports.ts  math.ts  rapier.ts  raw.ts
src.ts/control/: character_controller.ts  index.ts  pid_controller.ts  ray_cast_vehicle_controller.ts
src.ts/dynamics/: ccd_solver.ts  coefficient_combine_rule.ts  impulse_joint.ts  impulse_joint_set.ts  index.ts  integration_parameters.ts  island_manager.ts  joint.ts  joint_set.ts  multibody_joint.ts  multibody_joint_set.ts  rigid_body.ts  rigid_body_set.ts
src.ts/geometry/: broad_phase.ts  collider.ts  collider_set.ts  contact.ts  feature.ts  index.ts  narrow_phase.ts  point.ts  ray.ts  shape.ts  toi.ts
src.ts/pipeline/: debug_render_pipeline.ts  event_queue.ts  index.ts  physics_hooks.ts  physics_pipeline.ts  query_pipeline.ts  serialization_pipeline.ts  world.ts
src/control/: character_controller.rs  mod.rs  pid_controller.rs  ray_cast_vehicle_controller.rs
src/dynamic/: joint.rs  mod.rs  rigid_body.rs
src/dynamics/: impulse_joint.rs  impulse_joint_set.rs  integration_parameters.rs  island_manager.rs  joint.rs  joint_set.rs  mod.rs  multibody_joint.rs  multibody_joint_set.rs  rigid_body.rs  rigid_body_set.rs
src/geometry/: broad_phase.rs  collider.rs  collider_set.rs  contact.rs  feature.rs  mod.rs  narrow_phase.rs  point.rs  ray.rs  shape.rs  toi.rs
src/pipeline/: debug_render_pipeline.rs  event_queue.rs  mod.rs  physics_hooks.rs  physics_pipeline.rs  query_pipeline.rs  serialization_pipeline.rs
testbed2d/: .npmignore  package-lock.json  package.json  publish.sh  tsconfig.json  webpack.config.js
testbed2d/src/: Graphics.js  Graphics.ts  Gui.js  Gui.ts  Testbed.js  Testbed.ts  index.js  index.ts
testbed2d/src/demos/: ballJoints.js  ball_joints.js  balls.js  characterController.ts  collisionGroups.js  collisionGroups.ts  convexPolygons.js  convexPolygons.ts  cubes.js  cubes.ts  heightfield.js  heightfield.ts  keva.js  keva.ts  lockedRotations.js  lockedRotations.ts  oneWayPlatforms.ts  pidController.ts  polyline.js  polyline.ts  pyramid.js  revoluteJoints.js  revoluteJoints.ts  voxels.ts
testbed2d/static/: index.html
testbed2d/worker/: Box2DBackend.js  Box2D_v2.3.1_min.js  Box2D_v2.3.1_min.wasm.js  MatterBackend.js  PlanckBackend.js  RapierBackend.js  worker.js
testbed3d/: package-lock.json  package.json  pnpm-lock.yaml  publish.sh  tsconfig.json  webpack.config.js
testbed3d/src/: Graphics.js  Graphics.ts  Gui.js  Gui.ts  PhysicsDescription.js  PhysicsModifications.js  Testbed.js  Testbed.ts  index.js  index.ts
testbed3d/src/demos/: ball_joints.js  balls.js  ccd.js  ccd.ts  characterController.ts  collisionGroups.js  collisionGroups.ts  compoundShapes.ts  convexDecomposition.ts  convexPolyhedron.js  convexPolyhedron.ts  cubes.js  damping.js  damping.ts  elasticBall.ts  fountain.js  fountain.ts  glbToTrimesh.ts  glbtoConvexHull.ts  heightfield.js  heightfield.ts  joints.js  joints.ts  keva.js  keva.ts  lockedRotations.js  lockedRotations.ts  pidController.ts  platform.js  platform.ts  primitives.js  pyramid.js  pyramid.ts  revolute_joints.js  trimesh.js  trimesh.ts  voxels.ts
testbed3d/static/: index.html  sage.glb  sword.glb
testbed3d/worker/: AmmoBackend.js  CannonBackend.js  OimoBackend.js  PhysXBackend.js  RapierBackend.js  ammo.wasm.js  worker.js
