[workspace]
members = ["rapier2d", "rapier3d"]

[profile.release]
debug = false
codegen-units = 1
#lto = true

[patch.crates-io]
# rapier2d = { path = "../rapier/crates/rapier2d" }
# rapier3d = { path = "../rapier/crates/rapier3d" }
#parry2d = { path = "../parry/crates/parry2d" }
#parry3d = { path = "../parry/crates/parry3d" }
#nalgebra = { path = "../nalgebra" }
#simba = { path = "../simba" }

#nalgebra = { git = "https://github.com/dimforge/nalgebra", branch = "dev" }
#rapier2d = { git = "https://github.com/dimforge/rapier", rev = "d60177774d06ea7df09c83674d5dea74241f7823" }
#rapier3d = { git = "https://github.com/dimforge/rapier", rev = "d60177774d06ea7df09c83674d5dea74241f7823" }
#parry2d = { git = "https://github.com/dimforge/parry" }
#parry3d = { git = "https://github.com/dimforge/parry" }
