[workspace]
members = ["rapier2d", "rapier3d"]

[profile.release]
debug = false
codegen-units = 1
#lto = true

[patch.crates-io]
# rapier2d = { path = "../rapier/crates/rapier2d" }
# rapier3d = { path = "../rapier/crates/rapier3d" }
#parry2d = { path = "../parry/crates/parry2d" }
#parry3d = { path = "../parry/crates/parry3d" }
#nalgebra = { path = "../nalgebra" }
#simba = { path = "../simba" }

#nalgebra = { git = "https://github.com/dimforge/nalgebra", branch = "dev" }
rapier2d = { git = "https://github.com/dimforge/rapier", rev = "59ad88c2a4b0a869ef7c633803b6e2a897c95494" }
rapier3d = { git = "https://github.com/dimforge/rapier", rev = "59ad88c2a4b0a869ef7c633803b6e2a897c95494" }
#parry2d = { git = "https://github.com/dimforge/parry" }
#parry3d = { git = "https://github.com/dimforge/parry" }
