[package]
name = "dimforge_rapier3d_old" # Can't be named rapier3d which conflicts with the dependency.
version = "0.14.0"
authors = ["Sébastien Crozet <developer@crozet.re>"]
description = "3-dimensional physics engine in Rust - official JS bindings."
documentation = "https://rapier.rs/rustdoc/rapier2d/index.html"
homepage = "https://rapier.rs"
repository = "https://github.com/dimforge/rapier.js"
readme = "README.md"
keywords = ["physics", "dynamics", "rigid", "real-time", "joints"]
license = "Apache-2.0"
edition = "2018"

[features]
default = ["dim3"]
dim3 = []

[lib]
name = "rapier_wasm3d"
path = "../src/lib.rs"
crate-type = ["cdylib", "rlib"]
required-features = ["dim3"]

[lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2"))',
] }

[dependencies]
rapier3d = { version = "0.22.0", features = [
    "wasm-bindgen",
    "serde-serialize",
    "enhanced-determinism",
    "debug-render",
] }
ref-cast = "1"
wasm-bindgen = "^0.2.90"
js-sys = "0.3"
nalgebra = "0.33"
serde = { version = "1", features = ["derive", "rc"] }
bincode = "1"
crossbeam-channel = "0.5"
palette = "0.7"
parry2d = "0.17" # Use at least this version to fix a regression in 0.15.0

[package.metadata.wasm-pack.profile.release]
# add -g to keep debug symbols
wasm-opt = ['-O4', '--dce']
#wasm-opt = ['-g']
